--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ blinker==1.4
 Brotli==1.0.7
 click==7.1.2
 dash==1.14.0
+dash-bootstrap-components==0.10.3
 dash-core-components==1.10.2
 dash-html-components==1.0.3
 dash-renderer==1.6.0
@@ -25,11 +26,14 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+numpy==1.19.1
+pandas==1.1.0
 plotly==4.9.0
 PyJWT==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
+pytz==2020.1
 retrying==1.3.3
 six==1.15.0
 SQLAlchemy==1.3.18
